--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     "type": "git",
     "url": "git+https://github.com/sspringer82/jax.git"
   },
-  "keywords": ["todo", "list", "fancy"],
+  "keywords": [
+    "todo",
+    "list",
+    "fancy"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sspringer82/jax/issues"
   },
-  "homepage": "https://github.com/sspringer82/jax#readme"
+  "homepage": "https://github.com/sspringer82/jax#readme",
+  "dependencies": {
+    "express": "^4.16.3"
+  },
+  "devDependencies": {
+    "mocha": "^5.1.1"
+  }
 }
