--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/sspringer82/jax#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "morgan": "^1.9.0"
